--- a/CloudLib/pom.xml
+++ b/CloudLib/pom.xml
@@ -9,4 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>CloudLib</artifactId>
+
+    <dependencies>
+        <!-- Google GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Snake YAML -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.18</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
