--- a/CloudLib/pom.xml
+++ b/CloudLib/pom.xml
@@ -26,5 +26,13 @@
             <version>1.18</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
