improve console design for cloudmaster

--- a/CloudAPI/src/main/resources/plugin.yml
+++ b/CloudAPI/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: CloudAPI
 version: 1.0.0
 author: Bluplayz
 website: https://github.com/Bluplayz/CloudSystem
+load: STARTUP
 
 main: de.bluplayz.cloudapi.bukkit.BukkitCloudAPI
 
