--- a/CloudAPI/pom.xml
+++ b/CloudAPI/pom.xml
@@ -51,6 +51,19 @@
         </plugins>
     </build>
 
+    <repositories>
+        <!--
+        <repository>
+            <id>bungeecord-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+        -->
+        <repository>
+            <id>cloudnet-repo</id>
+            <url>http://dytanic.de/repositories</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- CloudLib -->
         <dependency>
@@ -60,10 +73,18 @@
         </dependency>
 
         <!-- BungeeCord -->
+        <!--
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.8-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-bootstrap</artifactId>
+            <version>1.8-1.12</version>
             <scope>provided</scope>
         </dependency>
 
